# bal-dpo

./: .gitignore  README.md  pyproject.toml
conf/: deepspeed-zero2.yaml  deepspeed-zero3.yaml
examples/: run-trl-sft.py
src/bal_dpo/algorithms/: balpo.py  dpo.py
src/bal_dpo/trainer/: balpo.py
tests/: test_balpo.py
tests/algorithms/: test_dpo.py
