[project]
name = "bal-dpo"
version = "0.0.1"
description = "Default template for PDM package"
authors = [{ name = "graham" }]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "BALCA-ONLY" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
